# RayTracer

./: .gitignore  CMakeLists.txt  RayTracer.pro  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  main.cpp  material.cpp  material.hpp  ray.cpp  ray.hpp  rgbvector.cpp  rgbvector.hpp  scene.cpp  scene.hpp  surface.cpp  surface.hpp  surfaceinstance.cpp  surfaceinstance.hpp  vector3.cpp  vector3.hpp
